objects/PartnerTier__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used to sort list partner based on Higher Tier.</description>
    <fields>
        <fullName>Tier1__c</fullName>
        <label>Tier1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier2__c</fullName>
        <label>Tier2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier3__c</fullName>
        <label>Tier3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>HigherPartnerTier</label>
</CustomObject>